solve build script

--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@loadable/component": "^5.15.2",
-    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.10.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^5.2.2",
     "flatted": "^3.2.7",
     "lint": "^1.1.2",
@@ -24,8 +21,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "^5.0.1",
-    "react-swipeable-views": "^0.14.0"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "s": "react-scripts start",
@@ -59,8 +55,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "ajv": "^7.2.4",
+    "babel-loader": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "react-dev-utils": "^12.0.1",
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "webpack": "^5.75.0"
   }
 }
