--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@loadable/component": "^5.15.2",
     "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.10.13",
@@ -14,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "flatted": "^3.2.7",
+    "fontawesome-free": "^1.0.4",
     "lint": "^1.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
