--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "uuidv4": "^6.2.13"
   },
   "scripts": {
     "s": "react-scripts start",
